# gemini_ai_for_pc

./: .gitignore  ind.html
backend/: pyproject.toml  server.py
client/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css
client/src/api/: index.ts
client/src/components/: ApiStatusIndicator.tsx  ChatContainer.tsx  Header.tsx  InputArea.tsx  Message.tsx  TypingIndicator.tsx
client/src/types/: index.ts
client/src/utils/: apiErrorhundler.ts
