[tool.poetry]
name = "gemini-server"
version = "0.1.0"
description = "FastAPI + GenAI backend"
authors = ["BloodCharry <vladvorobei1994@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/BloodCharry/gemini_ai_for_pc/"
keywords = ["fastapi", "generative-ai", "genai"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
python-dotenv = ">=1.1.1,<2.0.0"
google-generativeai = ">=0.8.5,<0.9.0"
pillow = ">=11.3.0,<12.0.0"
speechrecognition = "^3.14.3"
gtts = "^2.5.4"

[tool.poetry.scripts]
server = "server:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
